<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fragment_reminder"
            android:icon="@drawable/baseline_navigate_next_black_36"
            android:fontFamily="@font/quicksand_bold"
            android:title="@string/my_reminders" />
        <item
            android:id="@+id/nav_fragment_sickness"
            android:icon="@drawable/baseline_navigate_next_black_36"
            android:fontFamily="@font/quicksand_bold"
            android:title="@string/menu_my_sickness" />
        <item
            android:id="@+id/nav_fragment_medication"
            android:icon="@drawable/baseline_navigate_next_black_36"
            android:fontFamily="@font/quicksand_bold"
            android:title="@string/menu_my_medication" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_navigate_next_black_36"
            android:fontFamily="@font/quicksand_bold"
            android:title="@string/logout" />
    </group>
</menu>