<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_add_pills"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/quicksand_bold"
            android:text="Add by :"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_add_by_pills"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_start"
                android:backgroundTint="@color/medi_medication_add_by"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/pills"
                android:textColor="@color/medi_medication_add_by_text"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_add_by_cards"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_start"
                android:backgroundTint="@color/medi_medication_add_by_not_clicked"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/cards"
                android:textColor="@color/medi_medication_add_by_text"
                android:textSize="14dp" />

            <Button
                android:id="@+id/btn_add_by_box"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:background="@drawable/button_start"
                android:backgroundTint="@color/medi_medication_add_by_not_clicked"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/boxes"
                android:textColor="@color/medi_medication_add_by_text"
                android:textSize="14dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_weight="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/quicksand_bold"
            android:text="Date :"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/quicksand_semibold"
            android:gravity="end"
            android:paddingRight="5dp"
            android:text="2021-08-13"
            android:textColor="#7A7A7A"
            android:textSize="17dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_pills"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="4">

            <TextView
                android:id="@+id/txt_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Pills :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_pills"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_cards"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Pills In Card :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_pills_incard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Cards :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_cards"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_boxes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Pills In Card :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_pills_incard_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Cards In Box :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_cards_inbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/quicksand_bold"
                android:text="Boxes :"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/txt_boxes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:background="@drawable/input_border"
                android:ems="10"
                android:fontFamily="@font/quicksand_semibold"
                android:paddingLeft="5dp"
                android:paddingTop="4dp"
                android:paddingRight="5dp"
                android:paddingBottom="8dp"
                android:inputType="number"
                android:text="0"
                android:textAlignment="textEnd"
                android:textSize="16dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_weight="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/quicksand_bold"
            android:text="Total Pills :"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/txt_total_pills"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/input_border"
            android:ems="10"
            android:fontFamily="@font/quicksand_semibold"
            android:paddingLeft="5dp"
            android:paddingTop="4dp"
            android:paddingRight="5dp"
            android:paddingBottom="8dp"
            android:inputType="none"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="16dp" />

    </LinearLayout>

</LinearLayout>